--- a/home.html
+++ b/home.html
@@ -33,10 +33,39 @@
 			Check out the most recent listings. There are 1,135 new properties for sale this week.
 		</p>
 		<br><br>
+		<!-- <div class="kolom100">
+			<div class="kolom">
+				aaa
+			</div>
+			<div class="kolom">
+				aaa
+			</div>
+			<div class="kolom">
+				aaa
+			</div>
+			<div class="kolom">
+				aaa
+			</div>
+		</div> -->
+		<div class="kolom">
+			<img class="image" src="img/img-1.jpg">
+			<h3>&nbsp One of a kind</h3>
+			<p>&nbsp &nbsp 11 BARBATA GROVE, NOWRA, <br> &nbsp &nbsp NSW 2541</p>
+		</div>
+		<div class="kolom">
+			aaa
+		</div>
+		<div class="kolom">
+			aaa
+		</div>
+		<div class="kolom">
+			aaa
+		</div>
 		
 	</div>
-	<div class="footer">
+	<!-- <div class="footer">
+		<br>
 		<p>&copy; 2014 The Agency Estate Agents. All rights reserved. Website by Agentpoint</p>
-	</div>
+	</div> -->
 </body>
 </html>
