--- a/home.html
+++ b/home.html
@@ -32,7 +32,7 @@
 		<p style="text-align:center; color:#666666;">
 			Check out the most recent listings. There are 1,135 new properties for sale this week.
 		</p>
-		<br><br>
+		
 		<!-- <div class="kolom100">
 			<div class="kolom">
 				aaa
@@ -49,23 +49,53 @@
 		</div> -->
 		<div class="kolom">
 			<img class="image" src="img/img-1.jpg">
-			<h3>&nbsp One of a kind</h3>
-			<p>&nbsp &nbsp 11 BARBATA GROVE, NOWRA, <br> &nbsp &nbsp NSW 2541</p>
+			<h3>&nbsp &nbsp One of a kind</h3>
+			<p>&nbsp &nbsp &nbsp 11 BARBATA GROVE, NOWRA, <br> &nbsp &nbsp &nbsp NSW 2541</p>
+			&nbsp &nbsp
+			<img src="img/bed.png" >&nbsp &nbsp 4 &nbsp
+			<img src="img/bath.png" >&nbsp &nbsp 2 &nbsp
+			<img src="img/car.png" >&nbsp &nbsp 2 &nbsp
+			<br>
+			<p style="color:#fca44b !important; font-size:16px !important;">&nbsp &nbsp $479,000</p>
 		</div>
 		<div class="kolom">
-			aaa
+			<img class="image" src="img/img-2.jpg">
+			<h3>&nbsp &nbsp Walk to town & schools</h3>
+			<p>&nbsp &nbsp &nbsp 11 BARBATA GROVE, NOWRA, <br> &nbsp &nbsp &nbsp NSW 2541</p>
+			&nbsp &nbsp
+			<img src="img/bed.png" >&nbsp &nbsp 4 &nbsp
+			<img src="img/bath.png" >&nbsp &nbsp 2 &nbsp
+			<img src="img/car.png" >&nbsp &nbsp 2 &nbsp
+			<br>
+			<p style="color:#fca44b !important; font-size:16px !important;">&nbsp &nbsp AUCTION</p>
 		</div>
 		<div class="kolom">
-			aaa
+			<img class="image" src="img/img-3.jpg">
+			<h3>&nbsp &nbsp A hidden gem</h3>
+			<p>&nbsp &nbsp &nbsp 11 BARBATA GROVE, NOWRA, <br> &nbsp &nbsp &nbsp NSW 2541</p>
+			&nbsp &nbsp
+			<img src="img/bed.png" >&nbsp &nbsp 4 &nbsp
+			<img src="img/bath.png" >&nbsp &nbsp 2 &nbsp
+			<img src="img/car.png" >&nbsp &nbsp 2 &nbsp
+			<br>
+			<p style="color:#fca44b !important; font-size:16px !important;">&nbsp &nbsp $305,000</p>
 		</div>
 		<div class="kolom">
-			aaa
+			<img class="image" src="img/img-4.jpg">
+			<h3>&nbsp &nbsp Panoramic river views</h3>
+			<p>&nbsp &nbsp &nbsp 11 BARBATA GROVE, NOWRA, <br> &nbsp &nbsp &nbsp NSW 2541</p>
+			&nbsp &nbsp
+			<img src="img/bed.png" >&nbsp &nbsp 4 &nbsp
+			<img src="img/bath.png" >&nbsp &nbsp 2 &nbsp
+			<img src="img/car.png" >&nbsp &nbsp 2 &nbsp
+			<br>
+			<p style="color:#fca44b !important; font-size:16px !important;">&nbsp &nbsp $569,000</p>
 		</div>
-		
 	</div>
-	<!-- <div class="footer">
-		<br>
-		<p>&copy; 2014 The Agency Estate Agents. All rights reserved. Website by Agentpoint</p>
-	</div> -->
+	<!-- <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br> -->
+	<div class="footer">
+		
+		<p>Website by Agentpoint | 2014 Propertyre</p>
+	</div>
 </body>
 </html>
